# dist-lr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: gen_data.py  local.sh
include/: data_iter.h  lr.h  sample.h  util.h
src/: CMakeLists.txt  lr.cc  main.cc  util.cc
